syntax = "proto3";
package com.romeh.ordermanager.protobuf;
option java_package = "com.romeh.ordermanager.protobuf";
option optimize_for = SPEED;


/*enum OrderStatus{
    NotStarted = 0;
    Created = 1;
    Validated = 2;
    Signed = 3;
    COMPLETED = 4;

}*/

/*message CreatedEvent{
     string orderId=1;
     OrderStatus orderStatus= 2;
}

message FinishedEvent{
    string orderId=1;
    OrderStatus orderStatus= 2;
}*/

message OrderEvent{
    string orderId=1;
    string orderStatus= 2;
}

/*message SignedEvent{
    string orderId=1;
    OrderStatus orderStatus= 2;
}*/

message ValidatedEvent{
    string orderId=1;
    string orderStatus= 2;
}

message OrderCmd{
    string orderId=1;
    map<string, string> orderDetails = 2;
}

/*
message ValidateCmd{
    string orderId=1;
    map<string, string> orderDetails = 2;
}

message SignCmd{
    string orderId=1;
    map<string, string> orderDetails = 2;
}

message GetOrderStatusCmd{
    string orderId=1;
    map<string, string> orderDetails = 2;
}

message AsyncSignCmd{
    string orderId=1;
    map<string, string> orderDetails = 2;
}*/
